--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <form action="">
+            <legend>
+                <label for="name">Name</label><input type="text" id="name">
+                <label for="phone">Phone</label><input type="text" id="phone">
+                <label for="email">Email</label><input type="text" id="email">
+                <label for="address">Address</label><textarea name="address" id="address"></textarea>
+            </legend>
+
+        </form>
+    </div>
+    <div>
+        <form action="">
+            <!-- Correct info after reseach -->
+            <legend>
+                <label for="skincare">Do you use skincare products?</label>
+                <input type="radio" id="" name=""><label></label><label for="">Yes</label><input type="radio" id="" name=""><label></label><label for="">No</label>
+            </legend>
+
+            <!-- Correct info after reseach -->
+            <legend>
+                <label for="skincare">Is having good skin important to you?</label>
+                <input type="radio" id="" name=""><label></label><label for="">Yes</label><input type="radio" id="" name=""><label></label><label for="">No</label>
+            </legend>
+        </form>
+    </div>
     
 </body>
 </html>
