Label Bold Font Solution
Found a solution to excluding the header and last two labels from being selected as bold

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
            
             </fieldset>
 
-            <fieldset>
+            <fieldset class="feedback">
                 <label for="enjoy">What did you enjoy best about our product?</label>
                 <textarea name="customer-enjoyment-inquiry" id="enjoy"></textarea>
 
