Match header and logo

--- a/index.html
+++ b/index.html
@@ -21,14 +21,19 @@
     <form action="">
         <header>
             <h1>Customer Review</h1>
-
+            <div id="logo-inc">
+                <div id="logo">
+                    <p>L</p>
+                </div>
+                <p>Larana, Inc.</p>
+            </div>
             <fieldset>
                 
                 <label for="name">Name</label>
-                <input type="text" id="name" name="custumer-name">
+                <input type="text" id="name" name="custumer-name"><br>
 
                 <label for="phone">Phone</label>
-                <input type="text" id="phone" name="custumer-phone">
+                <input type="text" id="phone" name="custumer-phone"><br>
 
                 <label for="email">Email</label>
                 <input type="text" id="email" name="custumer-email">
